<resources>
    <string name="app_name">E-testy</string>
    <string name="login">Zaloguj</string>
    <string name="username_hint">Adres email lub login</string>
    <string name="login_box_hint">Login</string>
    <string name="password_hint">Hasło</string>
    <string name="enter_email">Podaj adres email</string>
    <string name="enter_login">Podaj login</string>
    <string name="enter_password">Podaj hasło</string>
    <string name="enter_password_confirm">Potwierdź hasło</string>
    <string name="email">Adres email</string>
    <string name="action_settings">Settings</string>
    <string name="forget_password">Zapomniałeś hasła?</string>
    <string name="recover_account">Odzyskaj konto</string>
    <string name="no_account">Nie masz konta?</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="create_account">Stwórz konto</string>
    <string name="recovery_label">Odzyskaj konto</string>
    <string name="recovery_enter_email">Podaj adres email lub login:</string>
    <string name="reset_password">Zresetuj hasło</string>
    <string name="next">Dalej</string>
    <string name="avatar">Avatar</string>
    <string name="cancel">Anuluj</string>
    <string name="user_exists_message">Adres email już jest zajęty.\n Czy chcesz się zalogować?</string>
    <string name="wrong_password_message">Jeżeli zapomniałeś/aś hasła pomożemy Ci je odzyskać</string>
    <string name="try_again">Spróbuj ponownie</string>
    <string name="send_again">Wyślij ponownie</string>
    <string name="descrption_email_verificaiton">Na podany przez Ciebie adres wysłaliśmy email z linkiem aktywacyjnym. Kliknij w niego aby aktywować konto.</string>
    <string name="email_verification">Weryfikacja email</string>
    <string name="ask_email_not_recived">Nie dostałeś emaila z linkiem aktywacyjnym?</string>
    <string name="email_already_verified">Zweryfikowałeś email?</string>
    <string name="create_test_label">Utwórz Test</string>
    <string name="test_title_label">Nazwa testu</string>
    <string name="section_label">Dział</string>
    <string name="subject_label">Przedmiot</string>
    <string name="title_activity_class">ClassActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
